[package]
name = "mailcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = "0.9.0"
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
