[package]
name = "mailcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.9.0", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5.0", default-features = false, features = ["runtime-tokio"] }
async-smtp = { version = "0.8", default-features = false, features = ["runtime-tokio"] }
color-eyre = "0.6.2"
dotenvy = "0.15"
eyre = "0.6.8"
futures-util = "0.3.28"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.3.8", features = ["derive"] }
